// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertyListImageCarousel should match snapshot 1`] = `
<View
  style={
    Object {
      "borderRadius": 4,
      "height": 210,
      "overflow": "hidden",
    }
  }
>
  <Image
    source={
      Object {
        "uri": "https://homzhub-bucket.s3.amazonaws.com/asset_images/8e8c48fc-c089-11ea-8247-34e12d38d70eprof.jpg",
      }
    }
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "rgba(0, 27, 54, 0.25)",
        "bottom": 0,
        "flex": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row-reverse",
          "margin": 15,
        }
      }
    >
      <Favorite
        containerStyle={
          Object {
            "backgroundColor": "transparent",
          }
        }
        onFavorite={[MockFunction]}
      />
    </View>
  </View>
</View>
`;

exports[`PropertyListImageCarousel should match snapshot with props 1`] = `
<View
  style={
    Object {
      "borderRadius": 4,
      "height": 210,
      "overflow": "hidden",
    }
  }
>
  <SnapCarousel
    bubbleRef={[Function]}
    carouselData={
      Array [
        Object {
          "file_name": "prof.jpg",
          "is_cover_image": true,
          "link": "https://homzhub-bucket.s3.amazonaws.com/asset_images/8e8c48fc-c089-11ea-8247-34e12d38d70eprof.jpg",
          "media_attributes": Object {},
          "media_type": "IMAGE",
        },
      ]
    }
    carouselItem={[Function]}
    onSnapToItem={[Function]}
    sliderWidth={360}
    testID="snapCarousel"
  />
  <View
    style={
      Object {
        "backgroundColor": "rgba(0, 27, 54, 0.25)",
        "bottom": 0,
        "flex": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row-reverse",
          "margin": 15,
        }
      }
    >
      <Favorite
        containerStyle={
          Object {
            "backgroundColor": "#0084F8",
            "borderRadius": 4,
            "padding": 4,
          }
        }
        onFavorite={[MockFunction]}
      />
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 8,
          "marginVertical": 40,
        }
      }
    >
      <Icon
        allowFontScaling={false}
        color="#FFFFFF"
        name="left-arrow"
        onPress={[Function]}
        size={25}
      />
      <Icon
        allowFontScaling={false}
        color="#FFFFFF"
        name="right-arrow"
        onPress={[Function]}
        size={25}
      />
    </View>
  </View>
</View>
`;
